--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <main class="content">
       <section class="description description_space_top">
-        <div class="two-columns">
+        <div class="two-columns description__two-columns">
           <h2 class="two-columns__brief">
             Главные проблемы в обучении
           </h2>
@@ -38,7 +38,81 @@
         </div>
       </section>
 
-      <section class="digits">
+      <section class="digits digits_space_top-bottom">
+        <h2 class="section-title section-title_theme_light">Цифры и факты</h2>
+        <h3 class="section-subtitle section-subtitle_theme_light">Про учёбу и мозг</h2>
+        <div class="table table_theme_light">
+          <div class="table__cell table__cell_theme_light">
+            <h4 class="table__heading table__heading_theme_light">
+              86 миллиардов
+            </h4>
+            <p class="table__text table__text_theme_light">
+              Число нейронов в мозге человека
+            </p>
+          </div>
+          <div class="table__cell table__cell_theme_light">
+            <h4 class="table__heading table__heading_theme_light">
+              2,1 миллиарда
+            </h4>
+            <p class="table__text table__text_theme_light">
+              Число нуждающихся в повышении квалификации
+            </p>
+            <p class="table__text table__text_theme_light table__text_space_margin">
+              Всемирный банк, 2017
+            </p>
+          </div>
+          <div class="table__cell table__cell_theme_light">
+            <h4 class="table__heading table__heading_theme_light">
+              1000 терабайт
+            </h4>
+            <p class="table__text table__text_theme_light">
+              Объём памяти человека
+            </p>
+          </div>
+          <div class="table__cell table__cell_theme_light">
+            <h4 class="table__heading table__heading_theme_light">
+              500 триллионов
+            </h4>
+            <p class="table__text table__text_theme_light">
+              Число ответсвенных за обучение нервных синапсов у взрослого человека
+            </p>
+          </div>
+          <div class="table__cell table__cell_theme_light">
+            <h4 class="table__heading table__heading_theme_light">
+              420 миллионов
+            </h4>
+            <p class="table__text table__text_theme_light">
+              Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства
+            </p>
+            <p class="table__text table__text_theme_light table__text_space_margin">
+              Всемирный банк, 2017
+            </p>
+          </div>
+          <div class="table__cell table__cell_theme_light">
+            <h4 class="table__heading table__heading_theme_light">
+              17-20 лет
+            </h4>
+            <p class="table__text table__text_theme_light">
+              Пик обучаемости
+            </p>
+          </div>
+          <div class="table__cell table__cell_theme_light">
+            <h4 class="table__heading table__heading_theme_light">
+              1885 год
+            </h4>
+            <p class="table__text table__text_theme_light">
+              Открытие кривой забывания
+            </p>
+          </div>
+          <div class="table__cell table__cell_theme_light">
+            <h4 class="table__heading table__heading_theme_light">
+              1889 год
+            </h4>
+            <p class="table__text table__text_theme_light">
+              Открытие условного рефлекса
+            </p>
+          </div>
+        </div>
       </section>
 
       <section class="feynman">
