--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
       <section class="digits digits_space_top-bottom">
         <h2 class="section-title section-title_theme_light">Цифры и факты</h2>
         <h3 class="section-subtitle section-subtitle_theme_light">Про учёбу и мозг</h2>
-        <div class="table table_theme_light">
-          <div class="table__cell table__cell_theme_light">
+        <ul class="table table_theme_light">
+          <li class="table__cell table__cell_theme_light">
             <h4 class="table__heading table__heading_theme_light">
               86 миллиардов
             </h4>
             <p class="table__text table__text_theme_light">
               Число нейронов в мозге человека
             </p>
-          </div>
-          <div class="table__cell table__cell_theme_light">
+          </li>
+          <li class="table__cell table__cell_theme_light">
             <h4 class="table__heading table__heading_theme_light">
               2,1 миллиарда
             </h4>
@@ -60,24 +60,24 @@
             <p class="table__text table__text_theme_light table__text_space_margin">
               Всемирный банк, 2017
             </p>
-          </div>
-          <div class="table__cell table__cell_theme_light">
+          </li>
+          <li class="table__cell table__cell_theme_light">
             <h4 class="table__heading table__heading_theme_light">
               1000 терабайт
             </h4>
             <p class="table__text table__text_theme_light">
               Объём памяти человека
             </p>
-          </div>
-          <div class="table__cell table__cell_theme_light">
+          </li>
+          <li class="table__cell table__cell_theme_light">
             <h4 class="table__heading table__heading_theme_light">
               500 триллионов
             </h4>
             <p class="table__text table__text_theme_light">
               Число ответсвенных за обучение нервных синапсов у взрослого человека
             </p>
-          </div>
-          <div class="table__cell table__cell_theme_light">
+          </li>
+          <li class="table__cell table__cell_theme_light">
             <h4 class="table__heading table__heading_theme_light">
               420 миллионов
             </h4>
@@ -87,35 +87,38 @@
             <p class="table__text table__text_theme_light table__text_space_margin">
               Всемирный банк, 2017
             </p>
-          </div>
-          <div class="table__cell table__cell_theme_light">
+          </li>
+          <li class="table__cell table__cell_theme_light">
             <h4 class="table__heading table__heading_theme_light">
               17-20 лет
             </h4>
             <p class="table__text table__text_theme_light">
               Пик обучаемости
             </p>
-          </div>
-          <div class="table__cell table__cell_theme_light">
+          </li>
+          <li class="table__cell table__cell_theme_light">
             <h4 class="table__heading table__heading_theme_light">
               1885 год
             </h4>
             <p class="table__text table__text_theme_light">
               Открытие кривой забывания
             </p>
-          </div>
-          <div class="table__cell table__cell_theme_light">
+          </li>
+          <li class="table__cell table__cell_theme_light">
             <h4 class="table__heading table__heading_theme_light">
               1889 год
             </h4>
             <p class="table__text table__text_theme_light">
               Открытие условного рефлекса
             </p>
-          </div>
-        </div>
+          </li>
+        </ul>
       </section>
 
-      <section class="feynman">
+      <section class="feynman feynman-wrapper">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+        <a href="#" class="feynman__link">Подробнее →</a>
       </section>
 
       <section class="kaufman">
