HTML и CSS блока kaufman, fix блока digits

--- a/index.html
+++ b/index.html
@@ -39,76 +39,76 @@
       </section>
 
       <section class="digits digits_space_top-bottom">
-        <h2 class="section-title section-title_theme_light">Цифры и факты</h2>
-        <h3 class="section-subtitle section-subtitle_theme_light">Про учёбу и мозг</h2>
-        <ul class="table table_theme_light">
-          <li class="table__cell table__cell_theme_light">
-            <h4 class="table__heading table__heading_theme_light">
+        <h2 class="section-title">Цифры и факты</h2>
+        <h3 class="section-subtitle">Про учёбу и мозг</h2>
+        <ul class="table">
+          <li class="table__cell">
+            <p class="table__heading">
               86 миллиардов
-            </h4>
-            <p class="table__text table__text_theme_light">
+            </p>
+            <p class="table__text">
               Число нейронов в мозге человека
             </p>
           </li>
-          <li class="table__cell table__cell_theme_light">
-            <h4 class="table__heading table__heading_theme_light">
+          <li class="table__cell">
+            <p class="table__heading">
               2,1 миллиарда
-            </h4>
-            <p class="table__text table__text_theme_light">
+            </p>
+            <p class="table__text">
               Число нуждающихся в повышении квалификации
             </p>
-            <p class="table__text table__text_theme_light table__text_space_margin">
+            <p class="table__text table__text_space_margin">
               Всемирный банк, 2017
             </p>
           </li>
-          <li class="table__cell table__cell_theme_light">
-            <h4 class="table__heading table__heading_theme_light">
+          <li class="table__cell">
+            <p class="table__heading">
               1000 терабайт
-            </h4>
-            <p class="table__text table__text_theme_light">
+            </p>
+            <p class="table__text">
               Объём памяти человека
             </p>
           </li>
-          <li class="table__cell table__cell_theme_light">
-            <h4 class="table__heading table__heading_theme_light">
+          <li class="table__cell">
+            <p class="table__heading">
               500 триллионов
-            </h4>
-            <p class="table__text table__text_theme_light">
+            </p>
+            <p class="table__text">
               Число ответсвенных за обучение нервных синапсов у взрослого человека
             </p>
           </li>
-          <li class="table__cell table__cell_theme_light">
-            <h4 class="table__heading table__heading_theme_light">
+          <li class="table__cell">
+            <p class="table__heading">
               420 миллионов
-            </h4>
-            <p class="table__text table__text_theme_light">
+            </p>
+            <p class="table__text">
               Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства
             </p>
-            <p class="table__text table__text_theme_light table__text_space_margin">
+            <p class="table__text table__text_space_margin">
               Всемирный банк, 2017
             </p>
           </li>
-          <li class="table__cell table__cell_theme_light">
-            <h4 class="table__heading table__heading_theme_light">
+          <li class="table__cell">
+            <p class="table__heading">
               17-20 лет
-            </h4>
-            <p class="table__text table__text_theme_light">
+            </p>
+            <p class="table__text">
               Пик обучаемости
             </p>
           </li>
-          <li class="table__cell table__cell_theme_light">
-            <h4 class="table__heading table__heading_theme_light">
+          <li class="table__cell">
+            <p class="table__heading">
               1885 год
-            </h4>
-            <p class="table__text table__text_theme_light">
+            </p>
+            <p class="table__text">
               Открытие кривой забывания
             </p>
           </li>
-          <li class="table__cell table__cell_theme_light">
-            <h4 class="table__heading table__heading_theme_light">
+          <li class="table__cell">
+            <p class="table__heading">
               1889 год
-            </h4>
-            <p class="table__text table__text_theme_light">
+            </p>
+            <p class="table__text">
               Открытие условного рефлекса
             </p>
           </li>
@@ -121,7 +121,92 @@
         <a href="#" class="feynman__link">Подробнее →</a>
       </section>
 
-      <section class="kaufman">
+      <section class="kaufman kaufman_space_top-bottom">
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h2>
+        <ul class="table table_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">
+              1
+            </p>
+            <p class="table__text table__text_theme_dark">
+              Выберите привлекательный проект.
+            </p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">
+              2
+            </p>
+            <p class="table__text table__text_theme_dark">
+              Сосредоточьтесь на каком-то одгом навыке.
+            </p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">
+              3
+            </p>
+            <p class="table__text table__text_theme_dark">
+              Определите целевой уровень мастерства.
+            </p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">
+              4
+            </p>
+            <p class="table__text table__text_theme_dark">
+              Разбейте навык на эелементы.
+            </p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">
+              5
+            </p>
+            <p class="table__text table__text_theme_dark">
+              Приготовьте всё необходимое для занятий.
+            </p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">
+              6
+            </p>
+            <p class="table__text table__text_theme_dark">
+              Устраните препятствия для занятий
+            </p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">
+              7
+            </p>
+            <p class="table__text table__text_theme_dark">
+              Выделите специальное время для занятий.
+            </p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">
+              8
+            </p>
+            <p class="table__text table__text_theme_dark">
+              Создайте быстрые петли обратной связи.
+            </p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">
+              9
+            </p>
+            <p class="table__text table__text_theme_dark">
+              Занимайтесь по расписанию, короткими интенсивными интервалами.
+            </p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">
+              10
+            </p>
+            <p class="table__text table__text_theme_dark">
+              Уделяйте внимание количеству и скорости.
+            </p>
+          </li>
+        </ul>
+        <img src="./images/kaufman-triangle.svg" alt="Треугольник" class="kaufman__triangle"/>
       </section>
     </main>
     <footer class="footer">
