HTML и CSS блока footer, fix блока digits и kaufman

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <section class="digits digits_space_top-bottom">
         <h2 class="section-title">Цифры и факты</h2>
-        <h3 class="section-subtitle">Про учёбу и мозг</h2>
+        <h2 class="section-subtitle">Про учёбу и мозг</h2>
         <ul class="table">
           <li class="table__cell">
             <p class="table__heading">
@@ -123,7 +123,7 @@
 
       <section class="kaufman kaufman_space_top-bottom">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
-        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h2>
+        <h2 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h2>
         <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
             <p class="table__heading table__heading_theme_dark">
@@ -210,7 +210,49 @@
       </section>
     </main>
     <footer class="footer">
-
+      <div class="footer__columns">
+        <div class="footer__column footer__column_content_copyright">
+          <img src="./images/logo_place_footer.svg" alt="Лого" class="logo logo_place_footer"/>
+          <p class="footer__author">&copy; 2022. Дмитрий Плетюхин</p>
+        </div>
+        <div class="footer__column footer__column_content_info">
+          <p class="footer__column-heading">О Практикуме</p>
+          <ul class="footer__column-links">
+            <li>
+              <a href="#" class="footer__column-link">Главная</a>
+            </li>
+            <li>
+              <a href="#" class="footer__column-link">Концепция</a>
+            </li>
+            <li>
+              <a href="#" class="footer__column-link">Наставники</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__column footer__column_content_social">
+          <p class="footer__column-heading">Соцсети</p>
+          <ul class="footer__column-links">
+            <li>
+              <a href="#" class="footer__column-link">
+                <img src="./images/facebook_color_white.svg" alt="Facebook" class="footer__social-icon"/>
+                Facebook
+              </a>
+            </li>
+            <li>
+              <a href="#" class="footer__column-link">
+                <img src="./images/vk_color_white.svg" alt="ВКонтакте" class="footer__social-icon"/>
+                ВКонтакте
+              </a>
+            </li>
+            <li>
+              <a href="#" class="footer__column-link">
+                <img src="./images/instagram_color_white.svg" alt="Instagram" class="footer__social-icon"/>
+                Instagram
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </footer>
   </div>
 </body>
