--- a/index.html
+++ b/index.html
@@ -49,22 +49,22 @@
           </div>
         </section>
 
-        <section class="digits digits_space_top-bottom">
+        <section class="digits">
           <h2 class="section-title">Цифры и факты</h2>
           <h2 class="section-subtitle">Про учёбу и мозг</h2>
           <ul class="table">
             <li class="table__cell">
-              <p class="table__heading">
+              <h3 class="table__heading">
                 86 миллиардов
-              </p>
+              </h3>
               <p class="table__text">
                 Число нейронов в мозге человека
               </p>
             </li>
             <li class="table__cell">
-              <p class="table__heading">
+              <h3 class="table__heading">
                 2,1 миллиарда
-              </p>
+              </h3>
               <p class="table__text">
                 Число нуждающихся в повышении квалификации
               </p>
@@ -73,26 +73,26 @@
               </p>
             </li>
             <li class="table__cell">
-              <p class="table__heading">
+              <h3 class="table__heading">
                 1000 терабайт
-              </p>
+              </h3>
               <p class="table__text">
                 Объём памяти человека
               </p>
             </li>
             <li class="table__cell">
-              <p class="table__heading">
+              <h3 class="table__heading">
                 500 триллионов
-              </p>
+              </h3>
               <p class="table__text">
-                Число ответсвенных за обучение нервных синапсов у взрослого
+                Число ответственных за обучение нервных синапсов у взрослого
                 человека
               </p>
             </li>
             <li class="table__cell">
-              <p class="table__heading">
+              <h3 class="table__heading">
                 420 миллионов
-              </p>
+              </h3>
               <p class="table__text">
                 Число взрослых людей моложе 25 лет, не имеющих образования для
                 трудоустройства
@@ -102,25 +102,25 @@
               </p>
             </li>
             <li class="table__cell">
-              <p class="table__heading">
+              <h3 class="table__heading">
                 17-20 лет
-              </p>
+              </h3>
               <p class="table__text">
                 Пик обучаемости
               </p>
             </li>
             <li class="table__cell">
-              <p class="table__heading">
+              <h3 class="table__heading">
                 1885 год
-              </p>
+              </h3>
               <p class="table__text">
                 Открытие кривой забывания
               </p>
             </li>
             <li class="table__cell">
-              <p class="table__heading">
+              <h3 class="table__heading">
                 1889 год
-              </p>
+              </h3>
               <p class="table__text">
                 Открытие условного рефлекса
               </p>
@@ -134,7 +134,7 @@
           <a href="#" class="feynman__link">Подробнее →</a>
         </section>
 
-        <section class="kaufman kaufman_space_top-bottom">
+        <section class="kaufman">
           <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
           <h2 class="section-subtitle section-subtitle_theme_dark">от Джоша
             Кауфмана</h2>
@@ -230,7 +230,7 @@
             <p class="footer__author">&copy; 2022. Дмитрий Плетюхин</p>
           </div>
           <nav class="footer__column footer__column_content_info">
-            <h2 class="footer__column-heading">О Практикуме</h2>
+            <h3 class="footer__column-heading">О Практикуме</h3>
             <ul class="footer__column-links">
               <li>
                 <a href="#" class="footer__column-link">Главная</a>
@@ -244,7 +244,7 @@
             </ul>
           </nav>
           <nav class="footer__column footer__column_content_social">
-            <h2 class="footer__column-heading">Соцсети</h2>
+            <h3 class="footer__column-heading">Соцсети</h3>
             <ul class="footer__column-links">
               <li>
                 <a href="#" class="footer__column-link">
