--- a/index.html
+++ b/index.html
@@ -48,6 +48,72 @@
           </div>
         </section>
 
+        <section class="techniques">
+          <h2 class="section-title">Техники обучения</h2>
+          <h2 class="section-subtitle">Пять практик от Барбары Оакли</h2>
+          <ul class="cards">
+            <li class="cards__item">
+              <img src="./images/cards-attention.png" alt="Книга в руках"
+                class="cards__image" />
+              <h3 class="cards__title">Два вида внимания</h3>
+              <p class="cards__description">
+                Глубокие знания возникают, если чередовать сфокусированное и
+                рассеянное мышление.
+              </p>
+            </li>
+            <li class="cards__item">
+              <img src="./images/cards-recall.png" alt="Мраморная статуя"
+                class="cards__image" />
+              <h3 class="cards__title">Recall</h3>
+              <p class="cards__description">
+                Вспоминайте изученное — это позволит соединить разрозненные
+                порции памяти.
+              </p>
+            </li>
+            <li class="cards__item">
+              <img src="./images/cards-interliving.png" alt="Транспортный узел"
+                class="cards__image" />
+              <h3 class="cards__title">Интерливинг</h3>
+              <p class="cards__description">
+                Изучайте несколько навыков одновременно, они обогащают друг
+                друга.
+              </p>
+            </li>
+            <li class="cards__item">
+              <img src="./images/cards-question.png" alt="Выставочное
+                пространство" class="cards__image" />
+              <h3 class="cards__title">Вопросы</h3>
+              <p class="cards__description">
+                Слушая преподавателя, придумывайте хороший вопрос, который вас
+                действительно волнует.
+              </p>
+            </li>
+            <li class="cards__item">
+              <img src="./images/cards-competence.png" alt="Книги в руке"
+                class="cards__image" />
+              <h3 class="cards__title">Иллюзия компетентности</h3>
+              <p class="cards__description">
+                Повторите про себя, запишите, расскажите другу: вам только
+                кажется, что вы владеете новой темой.
+              </p>
+            </li>
+          </ul>
+        </section>
+
+        <section class="video">
+
+        </section>
+
+        <section class="oakley">
+
+        </section>
+
+        <section class="feynman">
+          <h2 class="feynman__title">Метод Фейнмана</h2>
+          <p class="feynman__subtitle">Выучить и не забыть.</p>
+          <a href="#" class="feynman__link">Подробнее →</a>
+        </section>
+
         <section class="digits">
           <h2 class="section-title">Цифры и факты</h2>
           <h2 class="section-subtitle">Про учёбу и мозг</h2>
@@ -127,12 +193,15 @@
           </ul>
         </section>
 
-        <section class="feynman">
+        <section class="khan">
+
+        </section>
+
+        <!-- <section class="feynman">
           <h2 class="feynman__title">Метод Фейнмана</h2>
           <p class="feynman__subtitle">Выучить и не забыть.</p>
           <a href="#" class="feynman__link">Подробнее →</a>
-        </section>
-
+        </section> -->
         <section class="kaufman">
           <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
           <h2 class="section-subtitle section-subtitle_theme_dark">от Джоша
@@ -221,6 +290,11 @@
           </ul>
           <div class="kaufman__triangle"></div>
         </section>
+
+        <section class="resources">
+
+        </section>
+
       </main>
       <footer class="footer">
         <div class="footer__columns">
