--- a/index.html
+++ b/index.html
@@ -101,7 +101,20 @@
         </section>
 
         <section class="video">
-
+          <h2 class="section-title">Видео нa TED</h2>
+          <h2 class="section-subtitle">Для тех, кто любит прокрастинировать</h2>
+          <div class="video__iframes">
+            <iframe class="video__iframe" width="515" height="316"
+              src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube
+              video player" frameborder="0" allow="accelerometer; autoplay;
+              clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen controls="0"></iframe>
+            <iframe class="video__iframe" width="515" height="316"
+              src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube
+              video player" frameborder="0" allow="accelerometer; autoplay;
+              clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen controls="0"></iframe>
+          </div>
         </section>
 
         <section class="oakley">
