--- a/index.html
+++ b/index.html
@@ -223,14 +223,25 @@
         </section>
 
         <section class="khan">
-
+          <div class="khan__container">
+            <h2 class="khan__author">Салман Хан</h2>
+            <h3 class="khan__title">Весь мир — школа</h3>
+            <p class="khan__quote">Страсть и новаторство Сала Хана меняют
+              процесс обучения миллионов
+              студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать
+              всем, кто занимается образованием — так учащиеся повсюду смогут
+              получить навыки и знания, которые приносят успех в школе, карьере
+              и жизни.</p>
+            <p class="khan__quote-author">Джордж Лукас</p>
+            <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+            <div class="khan__book-container">
+              <img src="./images/khan-book.jpg" class="khan__book-pic"
+                alt="Обложка книги 'Весь мир — школа'" />
+              <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>
+            </div>
+          </div>
         </section>
 
-        <!-- <section class="feynman">
-          <h2 class="feynman__title">Метод Фейнмана</h2>
-          <p class="feynman__subtitle">Выучить и не забыть.</p>
-          <a href="#" class="feynman__link">Подробнее →</a>
-        </section> -->
         <section class="kaufman">
           <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
           <h2 class="section-subtitle section-subtitle_theme_dark">от Джоша
