--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <section class="techniques">
           <h2 class="section-title">Техники обучения</h2>
-          <h2 class="section-subtitle">Пять практик от Барбары Оакли</h2>
+          <p class="section-subtitle">Пять практик от Барбары Оакли</p>
           <ul class="cards">
             <li class="cards__item">
               <img src="./images/cards-attention.png" alt="Книга в руках"
@@ -103,18 +103,22 @@
         <section class="video">
           <h2 class="section-title">Видео нa TED</h2>
           <h2 class="section-subtitle">Для тех, кто любит прокрастинировать</h2>
-          <div class="video__iframes">
-            <iframe class="video__iframe" width="515" height="316"
-              src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube
-              video player" allow="accelerometer; autoplay;
-              clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen></iframe>
-            <iframe class="video__iframe" width="515" height="316"
-              src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube
-              video player" allow="accelerometer; autoplay;
-              clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen></iframe>
-          </div>
+          <ul class="video__iframes">
+            <li>
+              <iframe class="video__iframe" width="515" height="316"
+                src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube
+                video player" allow="accelerometer; autoplay;
+                clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            </li>
+            <li>
+              <iframe class="video__iframe" width="515" height="316"
+                src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube
+                video player" allow="accelerometer; autoplay;
+                clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            </li>
+          </ul>
         </section>
 
         <section class="oakley">
@@ -237,7 +241,7 @@
             <div class="khan__book-container">
               <img src="./images/khan-book.jpg" class="khan__book-pic"
                 alt="Обложка книги 'Весь мир — школа'" />
-              <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>
+              <a href="#" class="khan__buy-link" target="_blank">Купить книгу &rarr;</a>
             </div>
           </div>
         </section>
