доработка после второго ревью

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
         <section class="video">
           <h2 class="section-title">Видео нa TED</h2>
-          <h2 class="section-subtitle">Для тех, кто любит прокрастинировать</h2>
+          <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
           <ul class="video__iframes">
             <li>
               <iframe class="video__iframe" width="515" height="316"
@@ -149,7 +149,7 @@
 
         <section class="digits">
           <h2 class="section-title">Цифры и факты</h2>
-          <h2 class="section-subtitle">Про учёбу и мозг</h2>
+          <p class="section-subtitle">Про учёбу и мозг</p>
           <ul class="table">
             <li class="table__cell">
               <h3 class="table__heading">
@@ -248,8 +248,8 @@
 
         <section class="kaufman">
           <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
-          <h2 class="section-subtitle section-subtitle_theme_dark">от Джоша
-            Кауфмана</h2>
+          <p class="section-subtitle section-subtitle_theme_dark">от Джоша
+            Кауфмана</p>
           <ul class="table table_theme_dark">
             <li class="table__cell table__cell_theme_dark">
               <p class="table__heading table__heading_theme_dark">
@@ -337,8 +337,8 @@
 
         <section class="resources">
           <h2 class="section-title">Полезные ресурсы</h2>
-          <h2 class="section-subtitle">Больше материалов о техниках и лайфхаках
-            обучения</h2>
+          <p class="section-subtitle">Больше материалов о техниках и лайфхаках
+            обучения</p>
           <ul class="resources__logo-zone">
             <li>
               <a href="#" class="resources__logo">
